--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="height_min_textbox">120dp</dimen>
     <dimen name="height_min_textbox_halfscreen">500dp</dimen>
     <dimen name="width_button_default">120dp</dimen>
+
+    <dimen name="width_button_persons">140dp</dimen>
 </resources>
