Die auswahl was geschrieben werden soll auf NFC ist "schön" gemacht

--- a/app/src/main/res/layout/activity_nfcwrite.xml
+++ b/app/src/main/res/layout/activity_nfcwrite.xml
@@ -4,25 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:padding="@dimen/margin_screen"
     tools:context=".activities.ActivityNFCWrite">
 
-    <Button
-        android:id="@+id/activity_nfcwrite_button_message"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="87dp"
-        android:layout_marginTop="75dp"
-        android:text="Message" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:layout_height="200dp">
 
-    <Button
-        android:id="@+id/activity_nfcwrite_button_key"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/activity_nfcwrite_button_message"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="184dp"
-        android:text="Key" />
+        <Button
+            android:id="@+id/activity_nfcwrite_button_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:text="Message" />
+
+        <Button
+            android:id="@+id/activity_nfcwrite_button_key"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/activity_nfcwrite_button_message"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="100dp"
+            android:text="Key" />
+    </LinearLayout>
+
 </RelativeLayout>
