--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:padding="@dimen/margin_screen">
 
     <TextView
         android:id="@+id/Activity_welcome_text_welcome"
@@ -12,8 +13,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="64dp"
         android:text="@string/welcome_welcome"
-        android:textAppearance="@style/font_title"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:textAppearance="@style/font_title" />
 
     <TextView
         android:id="@+id/Activity_welcome_text_info"
@@ -32,9 +33,6 @@
         android:layout_alignEnd="@+id/Activity_welcome_text_info"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
