--- a/app/src/main/res/layout/activity_nfcwrite.xml
+++ b/app/src/main/res/layout/activity_nfcwrite.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:padding="@dimen/margin_screen"
-                tools:context=".activities.ActivityNFCWrite">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:padding="@dimen/margin_screen"
+    tools:context=".activities.ActivityNFCWrite">
 
     <LinearLayout
         android:layout_width="wrap_content"
