--- a/app/src/main/res/layout/activity_alice.xml
+++ b/app/src/main/res/layout/activity_alice.xml
@@ -1,115 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relativeLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/margin_screen">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:id="@+id/relativeLayout"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:padding="@dimen/margin_screen">
 
 
     <EditText
-        android:id="@+id/activity_alice_text_message"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_min_textbox_halfscreen"
-        android:layout_weight="1"
-        android:background="@null"
-        android:gravity="top"
-        android:hint="@string/empty_text_enter_msg"
-        android:importantForAccessibility="no"
-        android:importantForAutofill="no"
-        android:inputType="textMultiLine"
-        android:textAppearance="@style/font_msg_default"
-        tools:targetApi="o" />
+            android:id="@+id/activity_alice_text_message"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_min_textbox_halfscreen"
+            android:layout_weight="1"
+            android:background="@null"
+            android:maxLength="100"
+            android:gravity="top"
+            android:hint="@string/empty_text_enter_msg"
+            android:importantForAccessibility="no"
+            android:importantForAutofill="no"
+            android:inputType="textMultiLine"
+            android:textAppearance="@style/font_msg_default"
+            tools:targetApi="o"/>
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_distance"
-        android:layout_marginBottom="@dimen/margin_distance"
-        android:layout_weight="0"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/activity_alice_button_encrypt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:src="@android:drawable/ic_lock_idle_lock"
-            app:backgroundTint="@color/colorAlice"
-            app:elevation="0dp" />
-
-        <Spinner
-            android:id="@+id/activity_alice_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_distance"
-            android:layout_marginRight="@dimen/margin_distance"
-            android:layout_weight="1" />
+            android:layout_marginTop="@dimen/margin_distance"
+            android:layout_marginBottom="@dimen/margin_distance"
+            android:layout_weight="0"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/activity_alice_button_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:src="@android:drawable/ic_menu_manage"
-            android:textAlignment="center"
-            app:backgroundTint="@color/colorAlice"
-            app:elevation="0dp" />
+                android:id="@+id/activity_alice_button_encrypt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:src="@android:drawable/ic_lock_idle_lock"
+                app:backgroundTint="@color/colorAlice"
+                app:elevation="0dp"/>
+
+        <Spinner
+                android:id="@+id/activity_alice_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_distance"
+                android:layout_marginRight="@dimen/margin_distance"
+                android:layout_weight="1"/>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/activity_alice_button_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_distance"
-            android:clickable="true"
-            android:src="@android:drawable/ic_menu_help"
-            app:backgroundTint="@color/colorAlice" />
+                android:id="@+id/activity_alice_button_details"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:src="@android:drawable/ic_menu_manage"
+                android:textAlignment="center"
+                app:backgroundTint="@color/colorAlice"
+                app:elevation="0dp"/>
+
+        <android.support.design.widget.FloatingActionButton
+                android:id="@+id/activity_alice_button_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_distance"
+                android:clickable="true"
+                android:src="@android:drawable/ic_menu_help"
+                app:backgroundTint="@color/colorAlice"/>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
         <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_min_textbox_halfscreen"
-            android:layout_weight="1">
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_min_textbox_halfscreen"
+                android:layout_weight="1">
 
             <TextView
-                android:id="@+id/activity_alice_text_encrypted"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/empty_text_encrypted"
-                android:textAppearance="@style/font_msg_default" />
+                    android:id="@+id/activity_alice_text_encrypted"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/empty_text_encrypted"
+                    android:textAppearance="@style/font_msg_default"/>
         </ScrollView>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_distance"
-            android:layout_weight="0"
-            android:orientation="horizontal">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_distance"
+                android:layout_weight="0"
+                android:orientation="horizontal">
 
             <Space
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
 
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/activity_alice_button_nfcWrite"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:src="@android:drawable/ic_menu_send"
-                app:backgroundTint="@color/colorAlice"
-                app:elevation="0dp" />
+                    android:id="@+id/activity_alice_button_nfcWrite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:src="@android:drawable/ic_menu_send"
+                    app:backgroundTint="@color/colorAlice"
+                    app:elevation="0dp"/>
         </LinearLayout>
 
     </LinearLayout>
