--- a/app/src/main/res/layout/activity_code.xml
+++ b/app/src/main/res/layout/activity_code.xml
@@ -8,22 +8,22 @@
     tools:context=".activities.ActivityCode">
 
     <EditText
-        android:id="@+id/activity_code_edittext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="87dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="Name" />
+            android:id="@+id/activity_code_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="106dp"
+            android:layout_marginTop="181dp"
+            android:ems="10"
+            android:inputType="text"
+            android:text="Gib hier deinen Freischaltcode ein." android:layout_alignParentEnd="true"
+            android:layout_marginEnd="83dp"/>
 
     <Button
-        android:id="@+id/activity_code_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/freischalten" />
+            android:id="@+id/activity_code_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="@string/freischalten" android:layout_marginTop="260dp" android:layout_alignParentTop="true"/>
 </RelativeLayout>
