NFCwrite activity bearbeitet

--- a/app/src/main/res/layout/activity_nfcwrite.xml
+++ b/app/src/main/res/layout/activity_nfcwrite.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:padding="@dimen/margin_screen"
-    tools:context=".activities.ActivityNFCWrite">
+    android:orientation="vertical"
+    android:padding="@dimen/margin_screen">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/nfc_infotext"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:text="@string/nfc_info"
+        android:textAlignment="center"
+        android:textSize="18sp" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical"
-        tools:layout_height="200dp">
+        android:padding="@dimen/margin_screen"
+        tools:context=".activities.ActivityNFCWrite">
 
         <Button
             android:id="@+id/activity_nfcwrite_button_message"
@@ -25,16 +29,16 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:text="Message" />
+            android:text="@string/nachricht" />
 
         <Button
             android:id="@+id/activity_nfcwrite_button_key"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/activity_nfcwrite_button_message"
             android:layout_alignParentTop="true"
             android:layout_marginTop="100dp"
-            android:text="Key" />
-    </LinearLayout>
+            android:text="@string/schlüssel" />
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</LinearLayout>
