--- a/app/src/main/res/layout/activity_eve.xml
+++ b/app/src/main/res/layout/activity_eve.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:clickable="true"
-            android:src="@android:drawable/ic_lock_idle_lock"
+            android:src="@drawable/lock"
             app:backgroundTint="@color/colorEve" />
 
         <Spinner
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:src="@android:drawable/ic_menu_manage"
+            android:src="@drawable/wrench"
             android:textAlignment="center"
             app:backgroundTint="@color/colorEve"
             app:elevation="0dp" />
