--- a/app/src/main/res/layout/activity_alice.xml
+++ b/app/src/main/res/layout/activity_alice.xml
@@ -92,16 +92,24 @@
         </ScrollView>
 
         <LinearLayout
-                android:layout_width="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_distance"
+            android:layout_weight="0"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/activity_alice_butten_lastkey"
+                android:layout_width="@dimen/width_button_default"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_distance"
-                android:layout_weight="0"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                android:text="@string/alice_butten_lastkey" />
 
             <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/activity_alice_button_nfcWrite"
