--- a/app/src/main/res/layout/activity_encrypt_details_plain.xml
+++ b/app/src/main/res/layout/activity_encrypt_details_plain.xml
@@ -11,16 +11,18 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:orientation="vertical"
         android:padding="@dimen/margin_screen">
 
         <TextView
-            android:id="@+id/activity_encrypt_details_title"
+            android:id="@+id/activity_encrypt_details_plain_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/encrypt_details_caesar"
-            android:textAppearance="@style/font_msg_default"
+            android:text="@string/encrypt_details_plain"
+            android:textAppearance="@style/font_explanation_default"
             android:textSize="24sp"
             tools:layout_height="60dp" />
 
@@ -31,28 +33,21 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/activity_encrypt_details_info"
+                android:id="@+id/activity_encrypt_details_plain_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_distance"
                 android:layout_marginBottom="@dimen/margin_distance"
                 android:gravity="center"
-                android:text="@string/encrypt_details_caesar_info"
-                android:textAppearance="@style/font_msg_default"
+                android:text="@string/encrypt_details_plain_info"
+                android:textAppearance="@style/font_explanation_default"
                 tools:layout_height="120dp" />
 
-            <Spinner
-                android:id="@+id/activity_encrypt_details_spinner"
+            <Button
+                android:id="@+id/activity_encrypt_details_plain_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="75dp"
-                android:layout_marginBottom="75dp"
-                android:textAppearance="@style/font_msg_default" />
-
-            <Button
-                android:id="@+id/activity_encrypt_details_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_distance"
                 android:text="@string/anwenden" />
         </LinearLayout>
 
