added last key, added mysterious feature for vigenerekeys and tidied up

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,6 +4,7 @@
 
 
     <string-array name="cesar_array">
+        <item>@string/none</item>
         <item>@string/a</item>
         <item>@string/b</item>
         <item>@string/c</item>
