--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,40 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="@dimen/margin_screen">
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/Activity_welcome_text_welcome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="64dp"
         android:text="@string/welcome_welcome"
         android:textAlignment="center"
         android:textAppearance="@style/font_title" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/Activity_welcome_text_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/Activity_welcome_text_welcome"
-        android:layout_marginTop="55dp"
         android:text="@string/welcome_task"
         android:textAlignment="center"
         android:textAppearance="@style/font_explanation_default" />
 
-    <LinearLayout
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <CheckBox
+        android:id="@+id/activity_welcome_checkBox_nfcOn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/Activity_welcome_text_info"
-        android:layout_alignEnd="@+id/Activity_welcome_text_info"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:text="@string/welcome_nfcOn" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <TextView
+        android:id="@+id/activity_welcome_text_use"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_distance"
+        android:text="@string/welcome_use"
+        android:textAlignment="center"
+        android:textAppearance="@style/font_explanation_default"
+        android:visibility="invisible" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5" />
+
+    <LinearLayout
+        android:id="@+id/activity_welcome_buttonsGo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="invisible">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/activity_welcome_button_guided"
@@ -47,7 +84,6 @@
             app:srcCompat="@android:drawable/ic_media_play" />
 
         <TextView
-            android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -61,7 +97,6 @@
             android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
@@ -82,4 +117,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
