--- a/app/src/main/res/layout/activity_persons.xml
+++ b/app/src/main/res/layout/activity_persons.xml
@@ -1,155 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="@dimen/margin_screen">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/margin_screen">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/activity_person_text_intro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_marginBottom="@dimen/margin_distance"
+        android:text="@string/persons_task"
+        android:textAppearance="@style/font_explanation_default" />
 
-        <TextView
-            android:id="@+id/activity_person_text_intro"
+    <android.support.v7.widget.CardView
+        android:id="@+id/activity_persons_button_alice"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:padding="@dimen/margin_distance">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_distance"
-            android:text="@string/persons_task"
-            android:textAppearance="@style/font_explanation_default" />
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/margin_distance"
+            android:paddingBottom="@dimen/margin_distance">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/activity_persons_button_alice"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_gravity="center_vertical"
-            android:padding="@dimen/margin_distance">
+            <Button
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/margin_distance"
+                android:layout_marginEnd="@dimen/margin_distance"
+                android:layout_weight="0"
+                android:background="@drawable/design_fab_background"
+                android:backgroundTint="@color/colorAlice"
+                android:clickable="false"
+                android:text="@string/alice_short"
+                android:textAppearance="@style/font_msg_default"
+                android:textColor="@color/colorButtonWhite" />
 
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingTop="@dimen/margin_distance"
-                android:paddingBottom="@dimen/margin_distance">
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:layout_weight="1"
+                android:text="@string/persons_alice"
+                android:textAppearance="@style/font_explanation_additional" />
+        </LinearLayout>
 
-                <Button
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/margin_distance"
-                    android:layout_marginEnd="@dimen/margin_distance"
-                    android:layout_weight="0"
-                    android:background="@drawable/design_fab_background"
-                    android:backgroundTint="@color/colorAlice"
-                    android:clickable="false"
-                    android:text="A"
-                    android:textAppearance="@style/font_msg_default"
-                    android:textColor="@color/colorButtonWhite" />
+    </android.support.v7.widget.CardView>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end|center_vertical"
-                    android:layout_weight="1"
-                    android:text="@string/persons_alice" />
-            </LinearLayout>
+    <android.support.v7.widget.CardView
+        android:id="@+id/activity_persons_button_bob"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="@dimen/margin_distance"
+        android:layout_marginBottom="@dimen/margin_distance"
+        android:padding="@dimen/margin_distance">
 
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/activity_persons_button_bob"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_gravity="center_vertical"
-            android:padding="@dimen/margin_distance">
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/margin_distance"
+            android:paddingBottom="@dimen/margin_distance">
 
-            <LinearLayout
+            <Button
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/margin_distance"
+                android:layout_marginEnd="@dimen/margin_distance"
+                android:layout_weight="0"
+                android:background="@drawable/design_fab_background"
+                android:backgroundTint="@color/colorBob"
+                android:clickable="false"
+                android:text="@string/bob_short"
+                android:textAppearance="@style/font_msg_default"
+                android:textColor="@color/colorButtonWhite" />
+
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingTop="@dimen/margin_distance"
-                android:paddingBottom="@dimen/margin_distance">
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:layout_weight="1"
+                android:text="@string/persons_bob"
+                android:textAppearance="@style/font_explanation_additional" />
+        </LinearLayout>
 
-                <Button
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/margin_distance"
-                    android:layout_marginEnd="@dimen/margin_distance"
-                    android:layout_weight="0"
-                    android:background="@drawable/design_fab_background"
-                    android:backgroundTint="@color/colorBob"
-                    android:clickable="false"
-                    android:text="B"
-                    android:textAppearance="@style/font_msg_default"
-                    android:textColor="@color/colorButtonWhite" />
+    </android.support.v7.widget.CardView>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end|center_vertical"
-                    android:layout_weight="1"
-                    android:text="@string/persons_bob" />
-            </LinearLayout>
+    <android.support.v7.widget.CardView
+        android:id="@+id/activity_persons_button_eve"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:padding="@dimen/margin_distance">
 
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/activity_persons_button_eve"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_gravity="center_vertical"
-            android:padding="@dimen/margin_distance">
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/margin_distance"
+            android:paddingBottom="@dimen/margin_distance">
 
-            <LinearLayout
+            <Button
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/margin_distance"
+                android:layout_marginEnd="@dimen/margin_distance"
+                android:layout_weight="0"
+                android:background="@drawable/design_fab_background"
+                android:backgroundTint="@color/colorEve"
+                android:clickable="false"
+                android:text="@string/eve_short"
+                android:textAppearance="@style/font_msg_default"
+                android:textColor="@color/colorButtonWhite" />
+
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingTop="@dimen/margin_distance"
-                android:paddingBottom="@dimen/margin_distance">
-
-                <Button
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/margin_distance"
-                    android:layout_marginEnd="@dimen/margin_distance"
-                    android:layout_weight="0"
-                    android:background="@drawable/design_fab_background"
-                    android:backgroundTint="@color/colorEve"
-                    android:clickable="false"
-                    android:text="E"
-                    android:textAppearance="@style/font_msg_default"
-                    android:textColor="@color/colorButtonWhite" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end|center_vertical"
-                    android:layout_weight="1"
-                    android:text="@string/persons_eve" />
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:layout_weight="1"
+                android:text="@string/persons_eve"
+                android:textAppearance="@style/font_explanation_additional" />
+        </LinearLayout>
 
 
-        </android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
 
-        <TextView
-            android:id="@+id/activity_person_text_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginTop="@dimen/margin_distance"
-            android:text="@string/persons_info"
-            android:textAppearance="@style/font_explanation_default" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/activity_person_text_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_distance"
+        android:text="@string/persons_info"
+        android:textAppearance="@style/font_explanation_default" />
 
-</RelativeLayout>
+</LinearLayout>
